Cambié el grid de los proyectos
de col-lg-4 a col-lg-6 para poder incluir mas texto

--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
           </div>
 
           <div class="row grid">
-            <div class="col-lg-4 col-md-6 col-sm-12 element-item Backend">
+            <div class="col-lg-6 col-md-6 col-sm-12 element-item Backend">
               <div class="our-project">
                 <div class="img">
                   <a
                     href="https://github.com/mattverach/spring-ecommerce"
                     target="_blank"
-                    ><img src="./assets/img/portfolio/33.jpg" alt="port4"
+                    ><img src="./assets/img/portfolio/ecommercespring.jpg" alt="port4" width="500px"
                   /></a>
                 </div>
                 <div class="title py-4">
@@ -293,14 +293,13 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 element-item Backend">
+            <div class="col-lg-6 col-md-6 col-sm-12 element-item Backend">
               <div class="our-project">
                 <div class="img">
                   <a
                     href="https://github.com/mattverach/presenteapp"
                     target="_blank"
-                    ><img src="./assets/img/portfolio/44.jpg" alt="port4"
-                  /></a>
+                    ><img src="./assets/img/portfolio/presenteapp.jpg" alt="port4" width="500px"                  /></a>
                 </div>
                 <div class="title py-4">
                   <h4 class="text-uppercase">Presente App - Spring</h4>
@@ -311,13 +310,13 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 element-item Frontend">
+            <div class="col-lg-6 col-md-6 col-sm-12 element-item Frontend">
               <div class="our-project">
                 <div class="img">
                   <a
                     href="https://github.com/mattverach/ConferenciasBsAs"
                     target="_blank"
-                    ><img src="./assets/img/portfolio/22.jpg" alt="port4"
+                    ><img src="./assets/img/portfolio/conferenciasbsas.jpg" alt="port4" width="500px"
                   /></a>
                 </div>
                 <div class="title py-4">
