--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center services-title">
-              <h1 class="text-uppercase title-text">Tecnologías</h1>
+              <h1 class="text-uppercase about-title">Tecnologías</h1>
               <p class="para">
                 Tecnologías y herramientas con las que trabajo.
               </p>
