Updated vuejs logo

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                       height="67px"
                       padding="10px"
                     />
-                    <img src="https://vuejs.org/images/logo.svg" alt="s1"
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/1184px-Vue.js_Logo_2.svg.png" alt="s1"
                     height="67px padding="10px"">
                   </div>
                   <div class="card-body text-center">
